Minicraft+ version 2.0.7

+ Added sheep shearing
+ Added shear tool
+ Added potatoes
+ Added baked potatoes as food
+ Made zombies drop potatoes
+ Added a play menu with multiplayer and singleplayer as options
+ Added SRV record support; service name is _minicraft
+ Added aggregate analytics for various game states and actions
+ Added Fullscreen Mode [ default key F11 ]
* Sparks (the airwizard bullets) have been optimised
* Fixed picked up dungeon chests
* Tiles now connect to the edge of the world
* Farm tiles will no longer be destroyed if an item is dropped onto it
* Made crops grow slower
* Updated some textures; made wood, apples and gold apples look better
* Made sheep drop beef
* Picking up things no longer require stamina
* Mobs no longer target you and attack you when you are in creative mode
* Fixed sound not playing on certain actions
* You can only use axes on wood walls, wood doors, and wood floor
* Shears must be used to destroy wool tiles.
* Server saves when stopping

Minicraft+ version 2.0.6

+ Prevented players from getting stuck in skyholes with a cool animation
* Fixed the creeper's explosion to only hurt mobs if it actually explodes
* Made the quick-save key configurable
+ Added French localization
+ Added more buildings, including abandoned villages
* Let you place floors on clouds
* Fixed small line in the snake sprite that shouldn't be there
* Water and lava now form obsidian, and don't look like sand when they are next to each other
* Totally overhauled fishing!
+ Added paths, use a pickaxe on grass to make them
+ You can now craft obsidian walls and doors
+ Resource packs are now possible! Guide is on the wiki
- Knights and Snakes only have 4 levels instead of 5
* Creepers have been buffed
* Villages and spawners can no longer override stair barriers (to the sky or the dungeon)
* TNT can't break hard rock tiles or obsidian walls
* Menus that don't have frames don't render the title background


Minicraft+ version 2.0.5
